--- a/src/PlanIt/UserBundle/Resources/public/css/listing.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/listing.scss
@@ -74,7 +74,7 @@
 	}
 }
 
-label[for="planit_eventbundle_event_image"] {
+label[for="event_form_image"] {
 	display: block;
 	max-width: 200px;
 	margin: 5px auto;
