--- a/src/PlanIt/TodoBundle/Resources/views/Item/listform.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Item/listform.html.twig
@@ -1,12 +1,12 @@
-<div class="modal fade addItemModal" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+<div class="modal fade addListModal" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
             <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-            <h4 class="modal-title" id="myModalLabel">{{'add_task'|trans}}</h4>
+            <h4 class="modal-title" id="myModalLabel">{{'add_tasklist'|trans}}</h4>
             </div>
             <div class="modal-body">
-                <form id="form-post-item" action="" method="post" {{ form_enctype(form) }} class="blogger">
+                <form id="form-post-list" action="/app_dev.php/api/tasklists/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
                     {{ form_widget(form) }}
 
 			    <p>
