--- a/src/PlanIt/TodoBundle/Resources/public/css/todo.scss
+++ b/src/PlanIt/TodoBundle/Resources/public/css/todo.scss
@@ -16,8 +16,14 @@ header {
 	@include border-radius(5px);
 	input{
 		float:left;
-		background-color: #ffffff;
+		border:none;
+		background-color: #ff9f37;
 		margin-right: 20px;
+		&:focus {
+			background-color: #FFF !important;
+			color: #000000;
+			outline : none;
+		}
 	}
 }
 
@@ -43,6 +49,30 @@ header {
 	margin-right: -45px;
 }
 
+.modify_item, .delete_item {
+	background: url('/images/picto-modif.png') no-repeat;
+	width: 24px;
+	height: 24px;
+	margin: 2px 23px 0 0;
+	float: left;
+	&:hover {
+		cursor: pointer;
+	}
+}
+
+.delete_item{
+	background-position-x : -20px;
+	&:hover {
+		background-position-x : -69px;
+	}
+}
+
+.modify_item{
+	margin-right: 0px;
+	&:hover {
+		background-position-x : -49px;
+	}
+}
 
 
 /* LISTE DRAG AND DROP */
