--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -80,13 +80,15 @@
                                                 <option data-toggle="modal" data-target=".deleteGuestModal" data-multiple="1" data-action="delete" data-type="{{type_guest.id}}" value="delete">{{'delete'|trans}}</option>
                                         </select>
                                     </form>
-                                    <div class="name">{{type_guest.label}}</div>
+                                    <div class="typename"><input onblur="updateTypeguest({{type_guest.id}})" type="text" id="typename-{{type_guest.id}}" value="{{type_guest.label}}"></div>
                                 </div>
                                 
-                                <div class="price col-md-1 col-sm-2 col-md-offset-2 col-sm-offset-0">{{type_guest.price}}€/pers</div>
+                                {% if module.payable %}
+                                <div class="price col-md-1 col-sm-2 col-md-offset-2 col-sm-offset-0" id="typeprice-{{type_guest.id}}" data-price="{{type_guest.price}}">{{type_guest.price}}€/pers</div>
+                                {% endif %}
                                 <div class="right pull-right col-md-2 col-sm-3" >
-                                    <div class="modify_type"></div>
-                                    <div class="delete_type"></div>                                    
+                                    <!-- <div class="modify_type"></div> -->
+                                    <div class="delete_type" onclick="deleteTypeguest({{type_guest.id}})"></div>                                    
                                 </div>
                             </div>
                             {# Labels #}
