--- a/src/PlanIt/EventBundle/Resources/views/Event/form.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Event/form.html.twig
@@ -1,5 +1,5 @@
 
-<form action="/app_dev.php/api/events/{{user_id}}" method="post" {{ form_enctype(form) }} class="blogger">
+<form action="/api/events/{{user_id}}" method="post" {{ form_enctype(form) }} class="blogger">
     {{ form_widget(form) }}
     <p>
         <input type="submit" value="{{'add'|trans}}">
