Modification Event dans page Event + modification prix typeguest

--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -2,7 +2,10 @@
 {% block content %}
 	<div id="content_general_event" class="container">
 		<div class="row" id="title">
-			<div class="col-md-12" > <h1>{{ event.name }} </h1></div>
+			<div class="col-md-10" > <h1>{{ event.name }} </h1></div>
+			<div class="col-md-2 pull-right">
+                <button data-toggle="modal" data-target=".updateEventModal" data-type="">{{'update_event'|trans}}</button>
+            </div>
 		</div>
 
 		<div class="row" id="separator">
@@ -83,6 +86,19 @@
 						</div>
 		            </div>
 		      </div>
+		    </div>
+		    <div class="modal updateEventModal fade" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+		        <div class="modal-dialog">
+		            <div class="modal-content">
+		                <div class="modal-header">
+		                <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+		                <h4 class="modal-title" id="myModalLabel">{{'update_event'|trans}}</h4>
+		                </div>
+		                <div class="modal-body">
+		                	{{ render(controller('PlanItEventBundle:Event:updateform', { 'event_id' : event.id } ))}}
+						</div>
+		            </div>
+		        </div>
 		    </div>
 		</div>
     </div>
