--- a/src/PlanIt/GuestsBundle/Resources/public/css/guests.scss
+++ b/src/PlanIt/GuestsBundle/Resources/public/css/guests.scss
@@ -28,7 +28,7 @@ header {
 			padding: 13px 27px 13px 10px;
 			cursor: pointer;
 			@include border-radius(5px);
-			.typename {
+			.typename{
 				float:left;
 				margin-left: 20px;
 				input{
@@ -45,6 +45,29 @@ header {
 						margin-left: 16px;
 						font-size: 14px;
 					}
+				}
+
+			}
+			.typeprice{
+				input{
+					float:left;
+					border:none;
+					background-color: $head-list;
+					font-size: 14px;
+					width: 30%;
+					text-align:right;
+					&:focus {
+						background-color: #FFF !important;
+						color: #000000;
+						outline : none;
+					}
+					@media (max-width: 737px) {
+						margin-left: 16px;
+						font-size: 14px;
+					}
+				}
+				span{
+					float:left;
 				}
 
 			}
