Image et contrat à l'ajout de place, affichage image et lien sur contrat

--- a/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
@@ -3,13 +3,16 @@
 {% block content %}
 <div class="container">
 	<div class="row" id="title">
-        <div class="col-md-12" > <h1>{{'budget'|trans}}</h1> </div>
+        <div class="col-md-10" > <h1>{{'budget'|trans}}</h1> </div>
+        <div class="col-md-2 pull-right bt_budget">
+            <button data-toggle="modal" data-target=".updateModuleModal" data-type="">{{'update_module'|trans}}</button>
+        </div>
     </div>
 
 	<div class="row" id="separator">
 		<div class="col-md-12"> </div>
 	</div>
-
+	{{ render(controller('PlanItBudgetBundle:Page:updatemodule', { 'module_id' : module.id } ))}}
 	<div class="row buttons">
 
 		<div class="col-md-3 col-sm-3 col-xs-12 bt_budget"><button id="bouton_depense" data-toggle="modal" data-target=".addTypeExpenseModal" data-type="0" data-id="{{module.id}}">{{'add_expense'|trans}}</button></div>
