--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -5,14 +5,17 @@
  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <div class="container">
 	<div class="row" id="title">
-        <div class="col-md-12" > <h1>Lieu</h1> </div>
+        <div class="col-md-10"> <h1>{{'place'|trans}}</h1> </div>
+        <div class="col-md-2 pull-right bt_place">
+            <button data-toggle="modal" data-target=".updateModuleModal" data-type="">{{'update_module'|trans}}</button>
+        </div>
     </div>
 
 	<div class="row" id="separator">
 		<div class="col-md-12"> </div>
 	</div>
 	<section>
-
+	{{ render(controller('PlanItPlaceBundle:Page:updatemodule', { 'module_id' : module.id } ))}}
 	<div class="row">
         <div class="col-md-3 bt_place"><button data-toggle="modal" data-target=".addPlaceModal" class="col-md-3">{{'add_place'|trans}}</button></div>
     </div>
@@ -29,7 +32,13 @@
 		</div>
 		<div class="accordion-body">
 		    <div class="labels row">
-		    	<div class="col-lg-3 col-md-12 col-sm-12 img_place"> </div>
+		    	<div class="col-lg-3 col-md-12 col-sm-12 img_place">
+		    		{% if place.image != null %}
+		    			<img src="/images/place/places_pictures/{{place.image}}" width="100%"/>
+		    		{% else %}
+		    			<img src="/images/no-image.jpg" width="100%"/>
+		    		{% endif %}
+		    	</div>
 		    	<div class="col-lg-4 col-md-6 col-sm-12" id="infos">
 		        	<p><span class="label_descr">{{'address'|trans}}</span> : <input type="text" id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.address}}"></p>
 		        	<p><span class="label_descr">{{'capacity'|trans}}</span> : <input type="text" id="capacity-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.capacity}}"></p>
@@ -44,7 +53,7 @@
 		        			<option value="1" {% if place.state == 1 %} selected {% endif %}>{{'accepted'|trans}}</option>
 		        		</select>
 		        	</p>
-		        	<p><span class="label_descr">{{'contract'|trans}}</span> : {{place.contract}}
+		        	<p><span class="label_descr">{{'contract'|trans}}</span> : <a target="_blank" href="/files/place/contracts/{{place.contract}}">{{place.contract}} </a>
 		                <div class="bt_place">
 		                    <button data-toggle="modal" data-target=".updateContractModal" data-id="{{place.id}}">{{'update_contract'|trans}}</button> 
 		                </div>
