--- a/src/PlanIt/BudgetBundle/Resources/views/Expense/form.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Expense/form.html.twig
@@ -7,6 +7,7 @@
             </div>
             <div class="modal-body">
                 <form id="form-post-expense" action="" method="post" {{ form_enctype(form) }}>
+                    {{ form_errors(form) }}
                     {{ form_widget(form) }}
 
 			    <p>
