--- a/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
@@ -23,6 +23,7 @@
                 </div>
                 <div class="modal-body">
                     <form id="form-post-guest" action="" method="post" {{ form_enctype(form) }} class="blogger">
+                        {{ form_errors(form) }}
                         {{ form_widget(form) }}
 
 				    <p>
